--- a/index.mjml
+++ b/index.mjml
@@ -1,7 +1,21 @@
 <mjml>
   <mj-body>
-    <mj-section>
-      <mj-column width=""> </mj-column>
-    </mj-section>
+    <!-- Company Header -->
+    <mj-section background-color="#f0f0f0"></mj-section>
+
+    <!-- Image Header -->
+    <mj-section background-color="#f0f0f0"></mj-section>
+
+    <!-- Introduction Text -->
+    <mj-section background-color="#fafafa"></mj-section>
+
+    <!-- 2 columns section -->
+    <mj-section background-color="white"></mj-section>
+
+    <!-- 3 columns section Icons -->
+    <mj-section background-color="#fbfbfb"></mj-section>
+
+    <!-- Footer -->
+    <mj-section background-color="#f0f0f0"></mj-section>
   </mj-body>
 </mjml>
