--- a/index.mjml
+++ b/index.mjml
@@ -141,9 +141,56 @@
     </mj-section>
 
     <!-- 3 columns section Icons -->
-    <mj-section background-color="#fbfbfb"></mj-section>
+    <mj-section background-color="#ffffff">
+      <mj-column width="100%">
+        <mj-text align="center" font-size="30px">
+          REASONS TO LOVE EVEREDEN:
+        </mj-text>
+      </mj-column>
+      <mj-column width="33%">
+        <mj-image
+          align="center"
+          src="https://d3k81ch9hvuctc.cloudfront.net/company/NqV8Eq/images/1248e9d0-6ef9-465b-931a-d87c01bdc8eb.jpeg"
+          alt=""
+        />
+      </mj-column>
+      <mj-column width="33%">
+        <mj-image
+          align="center"
+          src="https://d3k81ch9hvuctc.cloudfront.net/company/NqV8Eq/images/93b30690-4709-4323-97e5-37fc0a4fd2b1.jpeg"
+          alt=""
+        />
+      </mj-column>
+      <mj-column width="33%">
+        <mj-image
+          align="center"
+          src="https://d3k81ch9hvuctc.cloudfront.net/company/NqV8Eq/images/b45dba4d-0e03-4df9-951c-35e763400c4d.jpeg"
+          alt=""
+        />
+      </mj-column>
+    </mj-section>
 
     <!-- Footer -->
-    <mj-section background-color="#f0f0f0"></mj-section>
+    <mj-section background-color="#ffffff" border-top="2px solid #E0DDDD">
+      <mj-column width="100%">
+        <mj-text font-size="14px" align="center">
+          Follow us on
+          <a
+            href="https://www.instagram.com/everedenbrand/?utm_source=email&utm_medium=flow-email&utm_campaign=Welcome%20Email%202%20Other%3A%20Code%20Reminder%20(T7sSxK)&utm_id=RXpkYg&triplesource=klaviyo&bxid=01H38DMQ2MJ0B20401HZ5FEEHN&_kx=KmzKbdO4ij54hiFI3d-IERZWv1YpC7JKiMmWltLSBegHzzPi1y5B3GPMBrlHefGL.NqV8Eq"
+            >Instagram.</a
+          >
+        </mj-text>
+      </mj-column>
+      <mj-column width="100%">
+        <mj-text color="#848484" font-size="14px" align="center">
+          No longer want to receive these emails? <a href="#">Unsubscribe</a>
+        </mj-text>
+      </mj-column>
+      <mj-column width="100%">
+        <mj-text color="#848484" font-size="14px" align="center">
+          Evereden 401 Broadway New York, NY 10013
+        </mj-text>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
